<resources>
    <string name="app_name">Canvas Trick</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->

    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the pokemon, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>
    <string name="need_save">You don\'t save, you don\'t want save?</string>
    <string name="how">How to</string>
    <string name="start_trick">Start Trick</string>
    <string name="edit">Custom</string>
    <string name="share">Share</string>
    <string name="more">More Apps</string>
    <string name="make_title">Make</string>
    <string name="shape_list_title">Choose a shape set</string>
    <string name="select_color">Select color</string>
    <string name="add_new">Create</string>
    <string name="insert_new_name">Enter a new shape set info</string>
    <string name="share_title">Share</string>
    <string name="upload_complete">Upload Complete.</string>
    <string name="save_complete">Save Complete.</string>
    <string name="help">Help</string>
    <string name="detail">Detail</string>
    <string name="whole">Whole</string>
    <string name="video_type">GUIDE STORY :</string>
    <string name="need_one_item">At least one shape set is required.</string>
    <string name="rename">rename</string>
    <string name="before">before</string>
    <string name="sort_type">Sort</string>
    <string name="recent">Recent</string>
    <string name="star">Star</string>
    <string name="landscape">In landscape mode, you can view it in full screen.</string>
    <string name="long_press">Long press until screen off</string>
    <string name="double_tap">Double tap, What you Want.</string>
    <string name="good_job">Good job. Now you can master this trick. </string>
    <string name="featured">Featured</string>
    <string name="start_tutorial">Tutorial</string>
    <string name="choose_share_app">choose one</string>
    <string name="the_name_of_the_shape_set">The name of the shape set</string>
    <string name="number_of_shapes">number of shapes</string>
    <string name="exit_comment">You want exit?</string>
    <string name="exit">exit</string>
    <string name="long_press_description">Press and hold the color button to continue</string>
    <string name="tap_description">Tap to select a color</string>
    <string name="guide_next">Next</string>
    <string name="guide_skip">Skip</string>
    <string name="guide_got_it">Got it</string>
    <string name="restart_tutorial">Restart Tutorial</string>
    <string name="restart_tutorial_confirm">Would you like to restart the tutorial?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="line_thickness">Line thickness</string>
    <string name="opacity">Opacity</string>
    <string name="recent_colors">Recent colors</string>
    <string name="long_press_hint">💡 Press and hold OK to start auto-draw mode!</string>
    <string name="opponent_chose_number">The audience chose %1$d. Double-tap that cell</string>
    <string name="menu_subtitle">An easy canvas mind-reading trick</string>
    <string name="menu_desc_edit">Create your own shape set</string>
    <string name="menu_desc_share">Share your creations with friends</string>
    <string name="rate_short">Rate Us</string>
    <string name="cross_promo_badge">Recommended</string>
    <string name="cross_promo_cta">Get it free</string>
    <string name="undo">Undo</string>
    <string name="create">Create</string>
    <string name="default_shape_set_name">Numbers</string>
    <string name="terms_agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="guide_long_press_title">Press and hold to begin</string>
    <string name="tutorial_character_name">Audience</string>
    <string name="tutorial_vn_step1">Say to them:\n\"Pick a number from 0 to 9\"</string>
    <string name="tutorial_vn_step2">Ask them:\n\"Got one?\"</string>
    <string name="tutorial_vn_step3">Look into their eyes.\n(Pretend to read their mind)</string>
    <string name="tutorial_vn_step4">Pretend to draw on the screen.\n(Any gesture will do)</string>
    <string name="tutorial_vn_step5">Great job! Now it\'s your turn to try.</string>
    <string name="tutorial_quiz_question">If they picked 9,\nwhich cell should you double-tap?</string>
    <string name="tutorial_quiz_correct">Correct! Now try it yourself!</string>
    <string name="tutorial_quiz_wrong">Think again!</string>

    <string name="tutorial_practice_intro">This time the audience picked 8.\nTry double-tapping cell 8 without any guide!</string>
    <string name="tutorial_practice_bubble">If the audience picked %d,\nwhere should you double-tap?</string>
    <string name="tutorial_practice_wrong">That\'s not cell 8! Try again.</string>
    <string name="tutorial_practice_correct">Perfect! You\'re ready!</string>
    <string name="tutorial_vn_step6">See? The screen looks like it\'s off.\nPlace the phone between you and them,\nthen tap the number spot twice.\nThe screen lights up and the drawing appears!</string>
    <string name="reminder_channel_name">Reminders</string>
    <string name="reminder_title_3day">Canvas Trick misses you!</string>
    <string name="reminder_body_3day">Come draw something amazing today!</string>
    <string name="reminder_title_7day">New patterns are waiting!</string>
    <string name="reminder_body_7day">It\'s been a while. Check out what\'s new!</string>

    <string name="cross_promo_magic_number_flash_title">Magic Number Flash</string>
    <string name="cross_promo_magic_number_flash_desc">Reveal their number with flash and vibration.</string>
    <string name="cross_promo_mind_reader_magic_title">Mind Reader Magic</string>
    <string name="cross_promo_mind_reader_magic_desc">Read the color they secretly choose.</string>
    <string name="dynamic_menu_help_desc">Learn how to perform the trick</string>
    <string name="dynamic_menu_restart_tutorial_desc">Restart from the beginning</string>
    <string name="dynamic_menu_rate_desc">Support us with a rating</string>
    <string name="dynamic_menu_more_apps_desc">Discover more magic apps</string>

    <string name="dynamic_menu_help_title">Tutorial</string>
    <string name="dynamic_menu_restart_tutorial_title">Practice Again</string>
    <string name="dynamic_menu_rate_title">Rate Us</string>
    <string name="dynamic_menu_more_apps_title">More Apps</string>
</resources>
