<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="20dp"
        android:text="@string/help"/>

    <VideoView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_below="@+id/txt_title"
        android:layout_height="400dp"
        />

    <RadioGroup
        android:id="@+id/rg_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoview"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/video_type"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_detail"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:checked="true"
            android:text="@string/detail"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_whole"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/whole"/>

    </RadioGroup>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_landscape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_video"
        android:textSize="16dp"
        android:text="@string/landscape"/>

</RelativeLayout>